--- a/appproject/accounts/templates/accounts/password_reset.html
+++ b/appproject/accounts/templates/accounts/password_reset.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block global_navigation %}{% endblock %}
 {% block global_character_widget %}{% endblock %}
 {% load static %}
 
